[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/level01/level01.gd" type="Script" id=1]
[ext_resource path="res://scenes/obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://img/textures/asphalt2.jpg" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 576, 0 )
}

[node name="Level01" type="Node"]
script = ExtResource( 1 )
Obstacle = ExtResource( 2 )

[node name="GeneratorPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="GeneratorPath"]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="GeneratorTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 840 )
scale = Vector2( 0.3, 0.3 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -640, 53.3357 )
current = true
limit_left = 0
limit_right = 576
offset_v = -1.0
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 264.0
margin_top = 120.0
margin_right = 304.0
margin_bottom = 139.0
theme = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 0, 1024 )

[node name="Background1" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 288, 512 )
texture = ExtResource( 6 )
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="GeneratorTimer" to="." method="_on_GeneratorTimer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
